--- a/index.html
+++ b/index.html
@@ -21,149 +21,160 @@
 
 <body>
 
-    <div class="cabecalho">
-        <div class="cabecalho__nav">
-            <a>
-                <img class="cabecalho__nav--logo" src="./assets/logo.png">
-            </a>
+    <header class="cabecalho">
+        <nav class="cabecalho__nav">
+            <!--O # faz comque ao clicar na logo, voltemos para a própria página-->
+            <!--aria-label vai falar para onde o link leva-->
+
+            <a aria-label="Página da Calmaria Spa" href="#"><img class="cabecalho__nav--logo" src="./assets/logo.png" alt="Logo da Calmaria Spa"></a>
+
             <span class="cabecalho__nav--line"></span>
-            <div class="cabecalho__nav--lista">
-                <div class="cabecalho__lista-item"><a href="#">Espaço</a></div>
-                <div class="cabecalho__lista-item"><a href="#">Serviços</a></div>
-                <div class="cabecalho__lista-item"><a href="#">Contato</a></div>
-            </div>
-        </div>
-    </div>
 
-    <div class="container">
+            <ul class="cabecalho__nav--lista">
+                <!--Usei IDs para coloca-los nos hrefs e levar o usuário a parte desejada-->
+                <li class="cabecalho__lista-item"><a href="#espaco-formulario">Espaço</a></li>
+                <li class="cabecalho__lista-item"><a href="#servicos-formulario">Serviços</a></li>
+                <li class="cabecalho__lista-item"><a href="#contato-formulario">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <div class="container__primeiro">
+    <main class="container">
+
+        <section class="container__primeiro">
             <div class="container__primeiro--texto">
                 <h1>Boas-vindas ao seu refúgio de <span>bem-estar</span></h1>
                 <button class="container__primeiro--texto-botao">Quero relaxar</button>
             </div>
-            <img class="container__primeiro--imagem" src="./assets/home-image.png">
-        </div>
 
-        <div class="container__secao">
-            <div class="container__secao--conteudo">
-                <img class="container__secao--conteudo--img1" src="./assets/espaco-1.png">
+            <img class="container__primeiro--imagem" src="./assets/home-image.png" alt="Mulher recebendo massagem deitada de bruços com a cabeça de lado sobre os braços cruzados e expressão de tranquilidade.">
+        </section>
+
+        <section class="container__secao" id="espaco-formulario">
+            <article class="container__secao--conteudo">
+                <img class="container__secao--conteudo--img1" src="./assets/espaco-1.png" alt="Piscina coberta com uma claraboia redonda, grande e rodeada com jardinagem.">
                 <div class="container__secao--conteudo--textos">
-                    <h1 class="container__secao--conteudo--textos-titulo">Tecnologia e natureza no seu relaxamento</h1>
+                    <h2 class="container__secao--conteudo--textos-titulo">Tecnologia e natureza no seu relaxamento</h2>
                     <p class="container__secao--conteudo--textos-infos">Equipamentos de ponta, produtos certificados e
                         uma equipe qualificada te ajudam a se livrar do stress com equilíbrio e tranquilidade.</p>
-                    <object data="./assets/separador-direita.svg" type="image/svg+xml"></object>
+                        <!--tabindex="-1" - faz com que ao usar tab o elemento não seja identificado-->
+                    <object aria-hidden="true" data="./assets/separador-direita.svg" type="image/svg+xml" tabindex="-1"></object>
                 </div>
-            </div>
-            <div class="container__secao--conteudo">
+            </article>
+            <article class="container__secao--conteudo">
                 <div class="container__secao--conteudo--textos">
-                    <h1 class="container__secao--conteudo--textos-titulo">Elevando o seu bem-estar</h1>
-                    <p class="container__secao--conteudo--textos-infos">Cada visita é uma jornada. Não importa a sua
-                        rotina, aqui você encontra seu paraíso particular.</p>
-                    <object data="./assets/separador-esquerda.svg" type="image/svg+xml"></object>
+                    <h2 class="container__secao--conteudo--textos-titulo">Elevando o seu bem-estar</h2>
+                    <p class="container__secao--conteudo--textos-infos">Cada visita é uma jornada. Não importa a sua rotina, aqui você encontra seu paraíso particular.</p>
+                    <!--tabindex="-1" - faz com que ao usar tab o elemento não seja identificado-->
+                    <object aria-hidden="true" data="./assets/separador-esquerda.svg" type="image/svg+xml" tabindex="-1"></object>
                 </div>
                 <div>
-                    <img class="container__secao--conteudo--img2" src="./assets/espaco-2.png">
-                    <img class="container__secao--conteudo--img2" src="./assets/espaco-3.png">
+                    <img class="container__secao--conteudo--img2" src="./assets/espaco-2.png" alt="Busto de uma mulher de costas em uma banheira de espumas segurando uma taça e de frente a uma porta de vidro com grandes pedras atrás.">
+                    <img class="container__secao--conteudo--img2" src="./assets/espaco-3.png" alt="Ambiente da Calmaria Spa com poltrona, plantas e uma piscina.">
                 </div>
-            </div>
-        </div>
+            </article>
+        </section>
 
-        <div class="container container__cards">
-            <div class="container__cards--card">
-                <img src="./assets/icon-massagem.png">
-                <h1 class="container__cards--card-title">Massagens</h1>
-                <img src="./assets/soft-star.png">
+        <section class="container container__cards" id="servicos-formulario">
+            <article class="container__cards--card">
+                <img src="./assets/icon-massagem.png" alt="Logo massagem">
+                <h3 class="container__cards--card-title">Massagens</h3>
+                <img src="./assets/soft-star.png" alt="Estrela">
                 <p class="container__cards--card-texto">Relaxantes, terapêuticas e drenagens. Nossa equipe está pronta
                     para aliviar suas tensões, tratar dores e retenção de líquido com técnicas eficientes.</p>
-            </div>
-            <div class="container__cards--card">
-                <img src="./assets/icon-tratamentos.png">
-                <h1 class="container__cards--card-title">Tratamentos</h1>
-                <img src="./assets/soft-star.png">
-                <p class="container__cards--card-texto">Sua pele gentilmente tratada com peelings, liftings, hidratações
+            </article>
+            <article class="container__cards--card">
+                <img src="./assets/icon-tratamentos.png" alt="Logo tratamentos">
+                <h3 class="container__cards--card-title">Tratamentos</h3>
+                <img src="./assets/soft-star.png" alt="Estrela">
+                <p class="container__cards--card-texto">Sua pele gentilmente tratada com <span lang="en"> peelings, liftings</span>, hidratações
                     profundas do corpo e do rosto, além de limpeza facial e banhos revigorantes.</p>
-            </div>
-            <div class="container__cards--card">
-                <img src="./assets/icon-dias-especiais.png">
-                <h1 class="container__cards--card-title">Day Spa</h1>
-                <img src="./assets/soft-star.png">
+            </article>
+            <article class="container__cards--card">
+                <img src="./assets/icon-dias-especiais.png" alt="Logo dias">
+                <h3 class="container__cards--card-title" lang="en">Day Spa</h3>
+                <img src="./assets/soft-star.png" alt="Estrela">
                 <p class="container__cards--card-texto">Pacotes que vão desde o "Dia revitalizante" com massagens e
                     tratamentos faciais, até o "Dia serenidade" com banhos terapêuticos e meditação.</p>
-            </div>
-        </div>
+            </article>
+        </section>
 
-        <div class="container__incricao">
-            <img class="container__incricao--mobile" src="./assets/mandala-superior-mobile.svg">
-            <img class="container__incricao--tablet" src="./assets/mandala-esquerda-tablet.svg">
+        <section class="container__incricao">
+            <img class="container__incricao--mobile" src="./assets/mandala-superior-mobile.svg" alt="Logos extremidades">
+            <img class="container__incricao--tablet" src="./assets/mandala-esquerda-tablet.svg" alt="Logos extremidades">
             <div class="container__incricao--div">
-                <h1 class="container__incricao--form-titulo">Inscreva-se para ganhar descontos!</h1>
-                <p class="container__incricao--form-texto">Cadastre-se em nossa newsletter para receber descontos e
+                <h4 class="container__incricao--form-titulo">Inscreva-se para ganhar descontos!</h4>
+                <p class="container__incricao--form-texto">Cadastre-se em nossa <span lang="en">newsletter</span> para receber descontos e
                     novidades sobre nossos serviços.</p>
                 <div class="container__incricao--form-input">
-                    <input id="inscricao" type="email">
-                    <button>Inscrever</button>
+                    <input id="inscricao" type="email" placeholder="Digite seu email" name="inscricao">
+                    <button for="inscricao">Inscrever</button>
                 </div>
             </div>
-            <img class="container__incricao--mobile" src="./assets/mandala-inferior-mobile.svg">
-            <img class="container__incricao--tablet" src="./assets/mandala-direita-tablet.svg">
-        </div>
+            <img class="container__incricao--mobile" src="./assets/mandala-inferior-mobile.svg" alt="Logos extremidades">
+            <img class="container__incricao--tablet" src="./assets/mandala-direita-tablet.svg" alt="Logos extremidades">
+        </section>
 
-        <div class="container__contato">
+        <section class="container__contato">
             <div class="container__contato--img">
-                <img src="./assets/contato-img-1.png">
-                <img src="./assets/contato-img-2.png">
-                <img src="./assets/contato-img-3.png">
+                <img src="./assets/contato-img-1.png" alt="Homem em uma banheira com produtos de spa no rosto.">
+                <img src="./assets/contato-img-2.png" alt="Mulher em uma banheira olhando horizonte na janela.">
+                <img src="./assets/contato-img-3.png" alt="Mulher em uma banheira com pétalas de rosa, com apenas mãos e pernas aparentes, segurando um livro e com uma bandeija com uvas e chá.">
             </div>
-            <div action="." class="container__contato--form">
+            <form action="." id="contato-formulario" class="container__contato--form">
                 <div class="container__contato--form-conteudo">
-                    <h1 class="container__contato--form-conteudo-titulo">Entre em contato</h1>
-                    <p class="container__contato--form-conteudo-texto">Reserve seu horário, tire dúvidas ou proponha
-                        sugestões, nosso
-                        canal é aberto para
-                        você!</p>
+                    <!--titulo-contato faz parte do aria-labelledby do fieldset-->
+                    <h5 id="titulo-contato" class="container__contato--form-conteudo-titulo">Entre em contato</h5>
+                    <p class="container__contato--form-conteudo-texto">Reserve seu horário, tire dúvidas ou proponha sugestões, nosso canal é aberto para você!</p>
                 </div>
                 <div class="container__contato--inputs">
-                    <label>Nome</label>
-                    <input type="text">
-                    <label>Email</label>
-                    <input type="email">
-                    <label>Telefone</label>
-                    <input type="text">
-                    <div>
-                        <p class="container__contato--inputs--titulo">Prefere contato por:</p>
+                    <label for="nome">Nome</label>
+                    <!--required: faz com que um campo seja preenchido (manda uma mensagem)-->
+                    <input id="nome" type="text" placeholder="Digite seu nome completo" name="nome" required>
+                    <label for="email">Email</label>
+                    <input id="email" type="email" placeholder="Digite seu email" name="email" required>
+                    <label for="telefone">Telefone</label>
+                    <input id="telefone" type="text" placeholder="(XX) XXXX-XXXX" name="telefone" required>
+
+                    <fieldset aria-labelledby="titulo-contato">
+                        <legend class="container__contato--inputs--titulo">Prefere contato por:</legend>
                         <div class="container__contato--inputs--div">
+                            <!--no name coloca igual para todos da seção-->
                             <div>
-                                <input type="radio">
-                                <label>Ligação</label>
+                                <input type="radio" id="ligacao" name="contato">
+                                <label for="ligacao">Ligação</label>
                             </div>
                             <div>
-                                <input type="radio">
-                                <label>WhatsApp</label>
+                                <input type="radio" id="whatsapp" name="contato">
+                                <label for="whatsapp">WhatsApp</label>
                             </div>
                             <div>
-                                <input type="radio">
-                                <label>Email</label>
+                                <input type="radio" id="email-input" name="contato">
+                                <label for="email-input">Email</label>
                             </div>
                         </div>
-                    </div>
-                    <label>Mensagem</label>
-                    <textarea type="text"></textarea>
+                    </fieldset>
+
+                    <label for="mensagem-input">Mensagem</label>
+                    <!--maxlenth para limitar a quantidade de caracteresdo campo-->
+                    <textarea id="mensagem-input" name="mensagem-input" type="text" maxlength="500" placeholder="Escreva sua mensagem"></textarea>
                 </div>
                 <button>Enviar</button>
-            </div>
-        </div>
-    </div>
+            </form>
+        </section>
+    </main>
 
-    <div class="rodape">
-        <p>Acesse nossas redes:</p>
-        <div class="rodape__nav--lista">
-            <div><a href="#" class="rodape__nav--lista--whatsapp"></a></div>
-            <div><a href="#" class="rodape__nav--lista--instagram"></a></div>
-            <div><a href="#" class="rodape__nav--lista--tiktok"></a></div>
-        </div>
-        <p>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</p>
-    </div>
+    <footer class="rodape">
+        <address>
+            Acesse nossas redes:<br><!--Quebra linha-->
+            <ul class="rodape__nav--lista">
+                <li><a aria-label="WhatsApp da Calmaria Spa" href="#" class="rodape__nav--lista--whatsapp"></a></li>
+                <li><a aria-label="Instagram da Calmaria Spa" href="#" class="rodape__nav--lista--instagram"></a></li>
+                <li><a aria-label="TikTok da Calmaria Spa" href="#" class="rodape__nav--lista--tiktok"></a></li>
+            </ul>
+            <small>Desenvolvido por Alura. Projeto fictício sem fins comerciais.</sma>
+    </address>
+    </footer>
 
 </body>
 
